# math

./: Makefile  README.md
src/: CMakeLists.txt  main.cpp
src/Combinatorics/: CMakeLists.txt  Combinatorics.cpp  Combinatorics.hpp  TestCombinatorics.cpp  TestCombinatorics.hpp
src/ZZTest/: CMakeLists.txt  TestZZTest.c  TestZZTest.h  zz-test.c  zz-test.cpp  zz-test.h
